--- a/index.html
+++ b/index.html
@@ -18,22 +18,10 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
-<script>
-var app = angular.module("uiDemo", ["ngRoute"]);
-app.config(function($routeProvider) {
-    $routeProvider
-    .when("/", {
-        templateUrl : "partials/home.html"
-    });
-});
-</script>
-
-
+<script src="scripts/app.js"></script>
 </head>
 <body  ng-app="uiDemo">
-
+<div ng-include="'partials/navbar.html'"></div>
 <div ng-view></div>
 
 </body>
