--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
 
-
+<link rel="stylesheet" href="css/customcss.css">
 <script src="scripts/app.js"></script>
 </head>
 <body  ng-app="uiDemo">
