Added icons for the wind speed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body  ng-app="uiDemo">
 <div ng-include="'partials/navbar.html'"></div>
-<div ng-view></div>
+<div ng-view class="container-full"></div>
 
 </body>
 </html>
