--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Brian's Basic Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta content="utf-8" http-equiv="encoding">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
