finished up hourly weather on the home page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body  ng-app="uiDemo">
 <div ng-include="'partials/navbar.html'"></div>
-<div ng-view class="container-full"></div>
+<div ng-view class="container-fluid"></div>
 
 </body>
 </html>
